# pptx

./: Cargo.toml  README.md
src/: common.rs  lib.rs  zip.rs
src/abstraction/: common_model.rs  mod.rs  paragraph.rs  presentation_part.rs  shape.rs  slide.rs  slide_master_part.rs  slide_part.rs  textrun.rs  unit.rs
src/package/: content_type.rs  media.rs  mod.rs  parts.rs
src/package/doc_props/: app.rs  ccore.rs  custom.rs  mod.rs
src/schemas/: mod.rs
src/schemas/deserializer/: mod.rs
src/schemas/drawing/: mod.rs
src/schemas/drawing/chart/: ct_area3_d_chart.rs  ct_area_chart.rs  ct_area_ser.rs  ct_ax_data_source.rs  ct_ax_pos.rs  ct_axis_unit.rs  ct_band_fmt.rs  ct_band_fmts.rs  ct_bar3_d_chart.rs  ct_bar_chart.rs  ct_bar_dir.rs  ct_bar_grouping.rs  ct_bar_ser.rs  ct_bubble_chart.rs  ct_bubble_scale.rs  ct_bubble_ser.rs  ct_built_in_unit.rs  ct_cat_ax.rs  ct_chart.rs  ct_chart_lines.rs  ct_chart_space.rs  ct_cross_between.rs  ct_crosses.rs  ct_cust_split.rs  ct_d_lbl.rs  ct_d_lbl_pos.rs  ct_d_lbls.rs  ct_d_pt.rs  ct_d_table.rs  ct_date_ax.rs  ct_depth_percent.rs  ct_disp_blanks_as.rs  ct_disp_units.rs  ct_disp_units_lbl.rs  ct_double.rs  ct_doughnut_chart.rs  ct_err_bar_type.rs  ct_err_bars.rs  ct_err_dir.rs  ct_err_val_type.rs  (+96 more)
src/schemas/drawing/chartDrawing/: ct_abs_size_anchor.rs  ct_connector.rs  ct_connector_non_visual.rs  ct_drawing.rs  ct_graphic_frame.rs  ct_graphic_frame_non_visual.rs  ct_group_shape.rs  ct_group_shape_non_visual.rs  ct_marker.rs  ct_picture.rs  ct_rel_size_anchor.rs  ct_shape.rs  ct_shape_non_visual.rs  mod.rs
(+447 files in other folders)
