[package]
name = "pptx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.28.1", features = ["serialize","overlapped-lists"] }
zip="0.6.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }